Query and Command Logic Add

--- a/CQRS_Architecture/CQRS_Architecture.csproj
+++ b/CQRS_Architecture/CQRS_Architecture.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BookEntryCommand.cs" />
+    <Compile Include="BookEntryHandler.cs" />
+    <Compile Include="BookSelectHandler.cs" />
+    <Compile Include="BookSelectQuery.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
