--- a/CQRSCore/CQRSCore.csproj
+++ b/CQRSCore/CQRSCore.csproj
@@ -40,7 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command.cs" />
+    <Compile Include="Event.cs" />
     <Compile Include="EventManager.cs" />
+    <Compile Include="ICommandHandler.cs" />
+    <Compile Include="IQueryHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query.cs" />
   </ItemGroup>
